syntax = "proto3";

option java_package = "com.example.services.models.featureOne";
option java_outer_classname = "FeatureOneProto";

package com.example.services.models.featureone;
import "models/request/request.proto";
import "models/response/response.proto";

service FeatureOne {
    rpc CallFeatureOne (FeatureOneRequest) returns (FeatureOneResponse);
}

message FeatureOneRequest {
    Request request = 1;
}

message FeatureOneResponse {
    Response response = 1;
}